consistent-hash.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
    - nginx-service # Service name do kubernetes
  http:
    - route:
        - destination:
            host: nginx-service
            subset: all

---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user" # Nome do header que será usado para o hash
        # minimumRingSize: 128     Tamanho mínimo do anel, quanto maior mais preciso será o hash
  subsets:
    - name: all
      labels:
        app: nginx
